# hypermodern-pitron

./: .flake8  README.md  noxfile.py  pyproject.toml
.github/workflows/: tests.yml
docs/: conf.py  index.rst  reference.rst
src/hypermodern_pitron/: __init__.py  console.py  wikipedia.py
tests/: __init__.py  conftest.py  test_console.py  test_wikipedia.py
