[tool.poetry]
name = "hypermodern-pitron"
version = "0.1.0"
description = "The hypermodern Pitron tutorial"
authors = ["Pitrified"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/Pitrified/hypermodern-pitron"
repository = "https://github.com/Pitrified/hypermodern-pitron"
keywords = ["hypermodern"]

[tool.poetry.dependencies]
python = "^3.8"
click = "^7.1.2"
requests = "^2.25.1"

[tool.poetry.dev-dependencies]
pytest = "^6.2.2"
coverage = {extras = ["toml"], version = "^5.4"}
pytest-cov = "^2.11.1"
pytest-mock = "^3.5.1"

[tool.poetry.scripts]
hypermodern-pitron = "hypermodern_pitron.console:main"

[tool.coverage.paths]
source = ["src", "*/site-packages"]

[tool.coverage.run]
branch = true
source = ["hypermodern_pitron"]

[tool.coverage.report]
show_missing = true
fail_under = 100

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
