[tool.poetry]
name = "hypermodern-pitron"
version = "0.1.0"
description = "The hypermodern Pitron tutorial"
authors = ["Pitrified"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/Pitrified/hypermodern-pitron"
repository = "https://github.com/Pitrified/hypermodern-pitron"
keywords = ["hypermodern"]

[tool.poetry.dependencies]
python = "^3.8"
click = "^7.1.2"
requests = "^2.25.1"
desert = "^2020.11.18"
marshmallow = "^3.10.0"
importlib-metadata = {version = "^3.7.0", python = "<3.8"}

[tool.poetry.dev-dependencies]
pytest = "^6.2.2"
coverage = {extras = ["toml"], version = "^5.4"}
pytest-cov = "^2.11.1"
pytest-mock = "^3.5.1"
black = "^20.8b1"
flake8 = "^3.8.4"
flake8-bandit = "^2.1.2"
flake8-black = "^0.2.1"
flake8-bugbear = "^20.11.1"
flake8-import-order = "^0.18.1"
safety = "^1.10.3"
mypy = "^0.812"
pytype = {version = "^2021.2.23", python = "3.8"}
flake8-annotations = "^2.5.0"
darglint = "^1.7.0"
xdoctest = "^0.15.4"
Sphinx = "^3.5.1"
sphinx-autodoc-typehints = "^1.11.1"
codecov = "^2.1.11"

[tool.poetry.scripts]
hypermodern-pitron = "hypermodern_pitron.console:main"

[tool.coverage.paths]
source = ["src", "*/site-packages"]

[tool.coverage.run]
branch = true
source = ["hypermodern_pitron"]

[tool.coverage.report]
show_missing = true
fail_under = 100

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
